syntax = "proto3";
package entity;
option java_multiple_files = true;

message PersonRequest {
  string firstName = 1;
  string lastName = 2;
  int64 age = 3;
}

message PersonResponse {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  int64 age = 4;
}